<resources>
    <string name="app_name">AgKit-Mobile</string>

    <string name="add_widget">Add widget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_widgets_to_your_configuration">Add one or more widgets to this configuration.</string>
    <string name="delete">delete</string>
    <string name="widget_undo">%1$s removed from config!</string>
    <string name="add_configuration">Add configuration</string>
    <string name="master_ip_hint">Master URL</string>
    <string name="master_port_hint">Master port</string>

    <!-- Buttons -->
    <string name="button_connect">Connect</string>
    <string name="button_send">Send</string>

    <!-- SSH Connection -->
    <string name="ssh_connection">SSH Connection Data</string>
    <string name="ssh_terminal">SSH Terminal</string>
    <string name="ip_address_hint">IP Address</string>
    <string name="port_hint">Port</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="terminal_hint">Terminal Input</string>

    <!-- Default config -->
    <string name="default_config_name">New Config</string>
    <string name="default_master_ip">10.42.0.1</string>
    <string name="default_master_port">11311</string>
    <string name="default_master_ticker_title">Default ticker title</string>
    <string name="default_master_notification_title">Default title</string>

    <!--Default SSH Settings -->
    <string name="default_ip_address">10.42.0.1</string>
    <string name="default_port">22</string>
    <string name="default_username">user</string>
    <string name="default_password">password</string>

    <!-- Preference key -->
    <string name="preference_file_key">prefs_configs</string>
    <string name="new_config_name">New config name</string>
    <string name="ok">OK</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="really_delete">Do you really want to delete the current configuration permanently?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="rename_config">Rename Config</string>
    <string name="rename_widget">Rename Widget</string>
    <string name="no_config">No config</string>
    <string name="start_with_default_configurations">Start With Default Configurations</string>
    <string name="create_custom_configuration">Create Custom Configuration</string>
    <string name="my_first_config">My first Config</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>

</resources>
